Implement Animated Emoticons. Does not work for Twitch emotes yet, BTTV emotes are super broken right now and the animated emotes sometimes shrink.
#31